--- a/html/index.html
+++ b/html/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="h-100">
     <head>
-        <title><!--TODO--></title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity=\"sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <meta charset="UTF-8"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/fontawesome.min.css" integrity="sha256-H9ochMml3Lh6FE/KKTUFfw2hD7mxc9c8pXoqfIso5Zk=" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/brands.min.css" integrity="sha256-raKzlOGvUaD9+fVBCYgyy2AwEyH2NblBdQe62bxWDOw=" crossorigin="anonymous" />
+
         <style>
-            html{position:relative;min-height:100%;}
-            body{margin-bottom:60px;}
-            footer{position:absolute;bottom:0;width:100%;height:60px;background-color:#f5f5f5;padding-top:10px;}
+            .footer { background-color: #f5f5f5; }
         </style>
+
+        <title></title>
     </head>
-    <body>
+    <body class="d-flex flex-column h-100">
         <div class="container">
             <h1><!--TODO--></h1>
 
             <h2>Links</h2>
             <ul>
-                <li><a href="http://www.nature.com/articles/sdata201618">What is FAIR?</a> / <a href="http://content.iospress.com/articles/information-services-and-use/isu824">What FAIR is not</a></li>
-                <li><a href="https://www.dtls.nl/fair-data/fair-principles-explained/">FAIR Principles explained</a></li>
-                <li><a href="http://fairmetrics.org">FAIR Metrics</a></li>
+                <li><a href="https://www.nature.com/articles/sdata201618">FAIR Principles paper</a></li>
+                <li><a href="https://www.go-fair.org/fair-principles/">FAIR Principles explained</a></li>
+                <li><a href="http://content.iospress.com/articles/information-services-and-use/isu824">What FAIR is not</a></li>
+                <li><a href="https://www.nature.com/articles/sdata2018118">FAIR Metrics paper</a></li>
+                <li><a href="https://github.com/FAIRMetrics/Metrics/blob/master/ALL.pdf">FAIR Metrics explained</a></li>
             </ul>
 
             <h2>Resources</h2>
@@ -34,11 +39,10 @@
             </ul>
         </div>
 
-        <footer>
+        <footer class="footer mt-auto py-3">
             <div class="container">
-                <a href="https://www.go-fair.org/">
-                    <img style="height:40px;" src="logo.svg"/>
-                </a>
+                <a class="float-left" href="https://www.go-fair.org/">GO-FAIR</a>
+                <a class="float-right" href="https://github.com/FAIRDataTeam/FAIR-VM/"><i class="fab fa-github"></i></a>
             </div>
         </footer>
     </body>
